Fix contrast issue

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
 .mt-25 {
     margin-top: 25px !important;
 }
+
+#name-help {
+    color: #000;
+}
